test/cases/labels/no-decl.c
// RUN: %check -e %s

main()
{
	goto a; // CHECK: /error: label 'a' undefined/
}
